adding var in css

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 
     <div class="container">
-        <h1>fresh and delicious.</h1>
-        <img src="imgs/icons/lunch-sm.png" class="logo">
-        <div class="some">
+        <h1>fresh and delicious</h1>
+        <img src="imgs/icons/lunch-sm.png" class="logo" alt="logo">
+        <!--<div class="some">
             <img src="imgs/icons/instagram-sm.png" class="logo">
             <img src="imgs/icons/facebook-sm.png" s class="logo">
-        </div>
+        </div>-->
 
 
         <nav id="navbar">
@@ -39,7 +39,7 @@
     </div>
 
 
-    <button onclick="topFunction()" id="topBtn" title="Go to top"><img src="imgs/icons/arrow_sm%20%E2%80%93%20up.png"></button>
+    <button onclick="topFunction()" id="topBtn" title="Go to top"><img src="imgs/icons/arrow_sm%20%E2%80%93%20up.png" alt="top"></button>
 
     <main></main>
 
